Using poll (instead of select), we can use fd > 1024.
In libgcrypt, it is only used for random number generator.
Using poll (instead of select), we can use fd > 1024.
In libgcrypt, it is only used for random number generator.
rC libgcrypt | |||
rC9fc0d145278d Fix building for Win64 target | |||
rC71d4d592d891 build,gcrypt.h: Don't define gcry_socklen_t. | |||
rC7da42a8e8cc5 random: Use poll instead of select. | |||
rC0f43570af93e build,gcrypt.h: Remove INSERT_SYS_SELECT_H. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | gniibe | T2385 support more than 1024 fds. | ||
Resolved | gniibe | T5637 Use poll for libgcrypt (support more than 1024 fds) |