random: Use poll instead of select.

* random/rndlinux.c (open_device): Use poll.
(_gcry_rndlinux_gather_random): Use poll.

--

Merging a patch for Fedora/RedHat for _gcry_rndlinux_gather_random.

Also change open_device for completeness.  Use of sleep(3) would be OK
here, but it may use SIGALRM on some systems, which is not good as a
library.

GnuPG-bug-id: 5637
Co-authored-by: Tomáš Mráz <tm@t8m.info>
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>